# josi-svc

./: .coverage  .dockerignore  .env.example  .gcloudignore  .gitignore  2025-07-13-this-session-is-being-continued-from-a-previous-co.txt  2025-07-15-can-you-recap-what-we-did-so-far.txt  2026-03-04-152415-command-messageinitcommand-message.txt  API_ENDPOINT_INVENTORY.md  API_TEST_COVERAGE_ANALYSIS.md  BEFORE_AFTER_ACCURACY_REPORT.md  CLAUDE.md  Dockerfile  Dockerfile.test  FIX_VEDIC_CHART_ERROR.md  QA_CELEBRITY_CHARTS_REPORT.md  README.md  VALIDATION_REPORT.md  VedicAstroAPI v3.4 (21 Languages - Vedic, Western and Tarot).postman_collection.json  accuracy_analysis_report.json  alembic.ini  app.yaml  astrology-app-complete-discussion.md  astrology-platform-market-analysis-2026.md  celebrity_validation_results.json  chart-export-format-archana.txt  chart-export-format-govindarajan.txt  chart-export-format-janaki.txt  chart-export-format-panneerselvam.txt  chart-export-format-valarmathi.txt  cloudbuild.yaml  conversation-export.md  coverage_report.json  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.vector.yml  docker-compose.yml  generate_coverage_report.py  (+16 more)
.claude/: settings.local.json
cli/: package-lock.json  package.json  tsconfig.json
deploy/: api.cloudbuild.dev.yaml  api.cloudbuild.prod.yaml  infra.cloudbuild.dev.yaml  infra.cloudbuild.prod.yaml  web.cloudbuild.dev.yaml  web.cloudbuild.prod.yaml
docs/: qa-testing-instructions.md
gcp/: deploy.sh  setup-cloud-sql.sh  setup-memorystore.sh
infra/: Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.yaml  __main__.py  compute.py  config.py  database.py  iam.py  loadbalancer.py  registry.py  secrets.py  storage.py  triggers.py
(+870 files in other folders)
